# cpp-opencv-websocket

./: .gitignore  CMakeLists.txt  README.md  index.html  main.cpp
header/: sensorData.h  socketServer.h  webcam.h
source/: base64.cpp  sensorData.cpp  socketServer.cpp  webcam.cpp
